--- a/.env.example
+++ b/.env.example
@@ -40,3 +40,6 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+API_URL=http://monitoring.test/api/
+ENV_ID=nclinic
